1. Метод .of [#70623 #316260]